Fixed some buttons jumping around when clicked.

--- a/assets/css/inc/form.less
+++ b/assets/css/inc/form.less
@@ -28,11 +28,6 @@ button, .button {
       background: var(--frm-ctrl-soft-bg-hov);
       text-decoration: none;
     }
-
-    &:active {
-      top: 1px;
-      text-shadow: none;
-    }
   }
 
   &.cur, &:has(>:checked) {
